edited readme file